# semanticist

./: .gitignore  LICENSE  README.md  ar_gen.ipynb  gen_demo.py  imagenet_classes.py  pyproject.toml  requirements.txt  submitit_test.py  submitit_train.py  test.sh  test_net.py  tok_demo.py  train.sh  train_net.py
configs/: autoregressive_l.yaml  autoregressive_xl.yaml  onenode_config.yaml  tokenizer_l.yaml  tokenizer_xl.yaml
experiments/: train.py
pages/: index.html
semanticist/engine/: diffusion_trainer.py  gpt_trainer.py  trainer_utils.py
semanticist/stage1/: diffuse_slot.py  diffusion_transfomer.py  fused_attention.py  pos_embed.py  vision_transformer.py
semanticist/stage1/diffusion/: gaussian_diffusion.py  respace.py
semanticist/stage1/transport/: integrators.py  transport.py
semanticist/stage2/: diffloss.py  generate.py  gpt.py
semanticist/utils/: datasets.py  device_utils.py  logger.py  lr_scheduler.py
